# stick_man

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: ik_sandbox.cpp  ik_sandbox.h  ik_skeleton.cpp  ik_skeleton.h  ik_types.cpp  ik_types.h  json.hpp  json_fwd.hpp  sm_animation.cpp  sm_animation.h  sm_bone.cpp  sm_bone.h  sm_fabrik.cpp  sm_fabrik.h  sm_interval_tree.h  sm_node.cpp  sm_node.h  sm_skeleton.cpp  sm_skeleton.h  sm_traverse.cpp  sm_traverse.h  sm_types.cpp  sm_types.h  sm_util.cpp  sm_util.h  sm_visit.cpp  sm_visit.h  sm_world.cpp  sm_world.h
src/model/: commands.cpp  commands.h  handle.cpp  handle.h  project.cpp  project.h
src/ui/: animation_controller.cpp  animation_controller.h  animation_pane.cpp  animation_pane.h  canvas.cpp  canvas.h  canvas_item.cpp  canvas_item.h  clipboard.cpp  clipboard.h  commands.cpp  commands.h  handle.cpp  handle.h  move_tool.cpp  move_tool.h  project.cpp  project.h  properties.cpp  properties.h  properties_pane.cpp  properties_pane.h  selection_tool.cpp  selection_tool.h  skeleton_pane.cpp  skeleton_pane.h  stick_man.cpp  stick_man.h  stick_man.qrc  tool_palette.cpp  tool_palette.h  tool_settings_pane.cpp  tool_settings_pane.h  tools.cpp  tools.h  util.cpp  util.h
src/ui/canvas/: bone_item.cpp  bone_item.h  canvas.cpp  canvas.h  canvas_item.cpp  canvas_item.h  canvas_manager.cpp  canvas_manager.h  node_item.cpp  node_item.h  rubber_band.cpp  rubber_band.h  scene.cpp  scene.h  skel_item.cpp  skel_item.h
src/ui/panes/: abstract_skeleton_pane.cpp  abstract_skeleton_pane.h  animation_pane.cpp  animation_pane.h  animation_skeleton_pane.cpp  animation_skeleton_pane.h  bone_properties.cpp  bone_properties.h  main_skeleton.cpp  main_skeleton.h  main_skeleton_pane.cpp  main_skeleton_pane.h  node_properties.cpp  node_properties.h  properties.cpp  properties.h  props_box.cpp  props_box.h  skeleton_pane.cpp  skeleton_pane.h  skeleton_properties.cpp  skeleton_properties.h  tool_settings_pane.cpp  tool_settings_pane.h  tools_pane.cpp  tools_pane.h  tree_view.cpp  tree_view.h
src/ui/tools/: add_bone_tool.cpp  add_bone_tool.h  add_node_tool.cpp  add_node_tool.h  animate_tool.cpp  animate_tool.h  drag_state.cpp  drag_state.h  move_tool.cpp  move_tool.h  pan_tool.cpp  pan_tool.h  select_settings.cpp  select_settings.h  select_tool_panel.cpp  select_tool_panel.h  selection_tool.cpp  selection_tool.h  tool.cpp  tool.h  tool_manager.cpp  tool_manager.h  tool_palette.cpp  tool_palette.h  tools.cpp  tools.h  zoom_tool.cpp  zoom_tool.h
